<resources>
    <string name="app_name">FourthApplication</string>
    
    
    <string name="ui_menu_search">Search</string>
    <string name="ui_menu_send">Send</string>
    <string name="ui_menu_add">Add</string>
    <string name="ui_menu_share">Share</string>
    <string name="ui_menu_feedback">Feedback</string>
    <string name="ui_menu_about">About</string>
    <string name="ui_menu_quit">Quit</string>
</resources>
